fix horizontal scroll

--- a/css/cayman.css
+++ b/css/cayman.css
@@ -20,6 +20,13 @@ body {
 }
 
 
+.row {
+	margin-right: 0!important;
+	margin-left: 0!important;
+}
+
+
+
 /* responsiveness */
 
 @media (max-width: 992px) {
